--- a/templates/users/signup.html
+++ b/templates/users/signup.html
@@ -10,6 +10,9 @@
 
 
 {% block content%}
+
+    {% include "partials/social_login.html" %}
+
     <form method="POST" action="{% url "users:signup" %}">
         {% csrf_token %}
         {{form.as_p}}
