--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -6,7 +6,7 @@
     transition-duration: 75ms;
     transition-timing-function: linear;
 }
-.nav_link{
+.nav_link {
     @apply ml-6 border-b-2 border-white h-full flex items-center;
     a{
         @apply py-10 px-5;
@@ -16,6 +16,16 @@
     }
 }
 
+
+.btn {
+    @apply text-center rounded-sm py-5 font-light text-lg w-full;
+}
+
+input{
+    @apply rounded-sm py-5 font-light text-lg w-full text-left border border-gray-600 px-5;
+    &:focus {
+        @apply outline-none border-teal-500;
+    }
+}
+
 @tailwind utilities;
-
-
