--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -28,4 +28,18 @@ input{
     }
 }
 
+form {
+    .input {
+        @apply mb-3 w-full;
+        &.has_error {
+            input {
+                @apply bg-red-200 border-gray-600;
+                &:focus{
+                    @apply border-gray-600;
+                }
+            }
+        }
+    }
+}
+
 @tailwind utilities;
