--- a/templates/mixins/auth/auth_form.html
+++ b/templates/mixins/auth/auth_form.html
@@ -1,4 +1,4 @@
-<form method="POST" class="w-full">
+<form method="POST" class="w-full" enctype="multipart/form-data" >
 <!-- action 없을때는 자기자신. -->
     {% csrf_token %}
 
