--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -97,4 +97,16 @@ form {
     @apply border-b border-gray-400 pb-8 mt-8;
 }
 
+
+.cal-grid {
+    display: grid;
+    grid-template-columns: repeat(7, minmax(0, 1fr));
+    gap: 10px;
+    justify-content: center;
+}
+
+.cal-number {
+    @apply w-full text-center rounded p-1 cursor-pointer;
+}
+
 @tailwind utilities;
