--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,4 @@
-{% load static %}
+{% load static i18n%}
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -22,7 +22,11 @@
 
                 {% block search-bar %}
                     <form class="w-9/12" method="get" action="{% url "rooms:search" %}" >
-                        <input class="search-box border px-5 w-full w-64 text-gray-900 placeholder-gray-600 font-medium py-3 rounded-sm shadow-md hover:shadow-lg focus:outline-none" name="city" placeholder="Search By City" />
+                        <input 
+                         class="search-box border px-5 w-full w-64 text-gray-900 placeholder-gray-600 font-medium py-3 rounded-sm shadow-md hover:shadow-lg focus:outline-none"
+                         name="city" 
+                         placeholder={% trans "Search By City"%} 
+                        />
                     </form>
                 {% endblock search-bar %}
             </div>
