--- a/templates/base.html
+++ b/templates/base.html
@@ -37,6 +37,14 @@
         {% block content %}{% endblock %}
 
         {% include "partials/footer.html" %}
+        <!-- java script -->
+        <script>
+            const langSelect =document.getElementById("js-lang");
+            const handleLangChange = () => {
+                const selected = langSelect.value;
+                fetch(`{% url "users:switch-language" %}?lang=${selected}`).then(()=>window.location.reload());
+            }
+            langSelect.addEventListener("change", handleLangChange);
+        </script>
     </body>
-
 </html>
